# vorsatz

./: .gitignore  pyproject.toml
vorsatz/: manage.py
vorsatz/on_tap/: apps.py  forms.py  models.py  urls.py  views.py
vorsatz/on_tap/migrations/: 0001_initial.py
vorsatz/on_tap/templates/on_tap/: base.html  on_tap_create.html  on_tap_list.html
vorsatz/vorsatz/: asgi.py  settings.py  urls.py  views.py  wsgi.py
worsatz/: .env  manage.py
worsatz/on_tap/: forms.py
worsatz/worsatz/: asgi.py  settings.py  urls.py  wsgi.py
