[tool.poetry]
name = "worsatz"
version = "0.1.0"
description = ""
authors = ["MarynaProkopchuk <9964649@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
black = "^24.8.0"
requests = "^2.32.3"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
django-storages = "^1.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
